part2/rendered_templates.yaml

################################
## Airflow Redis Service
#################################
apiVersion: v1
kind: Service
metadata:
  name: airflow-redis
  labels:
    tier: airflow
    component: redis
    release: airflow
    chart: "airflow-1"
    heritage: Helm
spec:
  type: ClusterIP
  selector:
    tier: airflow
    component: redis
    release: airflow
  ports:
    - name: redis-db
      protocol: TCP
      port: 6379
      targetPort: 6379
---


################################
## Airflow Webserver Service
#################################
apiVersion: v1
kind: Service
metadata:
  name: airflow-webserver
  labels:
    tier: airflow
    component: webserver
    release: airflow
    chart: "airflow-1"
    heritage: Helm
spec:
  type: ClusterIP
  selector:
    tier: airflow
    component: webserver
    release: airflow
  ports:
    - name: airflow-ui
      port: 8080
---


################################
## Airflow Worker Service
#################################
apiVersion: v1
kind: Service
metadata:
  name: airflow-worker
  labels:
    tier: airflow
    component: worker
    release: airflow
    chart: "airflow-1"
    heritage: Helm
spec:
  clusterIP: None
  selector:
    tier: airflow
    component: worker
    release: airflow
  ports:
    - name: worker-logs
      protocol: TCP
      port: 8793
      targetPort: 8793
---


################################
## Airflow Scheduler Deployment
#################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-scheduler
  labels:
    tier: airflow
    component: scheduler
    release: airflow
    chart: "airflow-1"
    executor: CeleryExecutor
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: airflow
      component: scheduler
      release: airflow
  template:
    metadata:
      labels:
        tier: airflow
        component: scheduler
        release: airflow
    spec:
      securityContext:
        runAsUser: 50000
        fsGroup: 0
      containers:
        - name: scheduler
          image: apache/airflow:2.6.2
          imagePullPolicy: IfNotPresent
          args:
            - bash
            - -c
            - exec airflow scheduler
          livenessProbe:
            initialDelaySeconds: 10
            timeoutSeconds: 20
            failureThreshold: 5
            periodSeconds: 60
            exec:
              command:
                - sh
                - -c
                - |
                  CONNECTION_CHECK_MAX_COUNT=0 AIRFLOW__LOGGING__LOGGING_LEVEL=ERROR exec /entrypoint \
                  airflow jobs check --job-type SchedulerJob --local
          volumeMounts:
            - name: logs
              mountPath: "/opt/airflow/logs"
            - name: dags
              mountPath: /opt/airflow/dags
            - name: config
              mountPath: "/opt/airflow/airflow.cfg"
              subPath: airflow.cfg
              readOnly: true
        - name: git-sync
          image: registry.k8s.io/git-sync/git-sync:v4.1.0
          imagePullPolicy: IfNotPresent
          securityContext:
              runAsUser: 65533
          volumeMounts:
          - name: dags
            mountPath: /git
          - name: git-sync-ssh-key
            mountPath: /etc/git-secret/ssh
            readOnly: true
            subPath: gitSshKey
      volumes:
        - name: config
          configMap:
            name: airflow-airflow-config
        - name: logs
          emptyDir: {}
        - name: dags
          emptyDir: {}
        - name: git-sync-ssh-key
          secret:
            secretName: airflow-ssh-secret
            defaultMode: 256
---


################################
## Airflow Webserver Deployment
################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-webserver
  labels:
    tier: airflow
    component: webserver
    release: airflow
    chart: "airflow-1"
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: airflow
      component: webserver
      release: airflow
  template:
    metadata:
      labels:
        tier: airflow
        component: webserver
        release: airflow
    spec:
      restartPolicy: Always
      containers:
        - name: webserver
          image: apache/airflow:2.6.2
          imagePullPolicy: IfNotPresent
          args:
            - bash
            - -c
            - exec airflow webserver
          volumeMounts:
            - name: config
              mountPath: "/opt/airflow/airflow.cfg"
              subPath: airflow.cfg
              readOnly: true
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            failureThreshold: 5
            periodSeconds: 10
      volumes:
        - name: config
          configMap:
            name: airflow-airflow-config
---


################################
## Airflow Redis StatefulSet
#################################
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: airflow-redis
  labels:
    tier: airflow
    component: redis
    release: airflow
    chart: "airflow-1"
spec:
  serviceName: airflow-redis
  selector:
    matchLabels:
      tier: airflow
      component: redis
      release: airflow
  template:
    metadata:
      labels:
        tier: airflow
        component: redis
        release: airflow
    spec:
      containers:
        - name: redis
          image: redis:7-bullseye
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh"]
          args: ["-c", "redis-server --requirepass ${REDIS_PASSWORD}"]
          ports:
            - name: redis-db
              containerPort: 6379
          volumeMounts:
            - name: redis-db
              mountPath: /data
      volumes:
        - name: redis-db
          emptyDir: {}
---


################################
## Airflow Worker Deployment
#################################
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: airflow-worker
  labels:
    tier: airflow
    component: worker
    release: airflow
    chart: "airflow-1"
    heritage: Helm
spec:
  replicas: 1
  serviceName: airflow-worker
  selector:
    matchLabels:
      tier: airflow
      component: worker
      release: airflow
  template:
    metadata:
      labels:
        tier: airflow
        component: worker
        release: airflow
    spec:
      securityContext:
        runAsUser: 50000
        fsGroup: 0
      restartPolicy: Always
      containers:
        - name: worker
          image: apache/airflow:2.6.2
          imagePullPolicy: IfNotPresent
          args:
            - bash
            - -c
            - |-
              exec \
              airflow celery worker
          livenessProbe:
            initialDelaySeconds: 10
            timeoutSeconds: 20
            failureThreshold: 5
            periodSeconds: 60
            exec:
              command:
                - sh
                - -c
                - CONNECTION_CHECK_MAX_COUNT=0 exec /entrypoint python -m celery --app airflow.executors.celery_executor.app inspect ping -d celery@$(hostname)
          volumeMounts:
            - name: logs
              mountPath: "/opt/airflow/logs"
            - name: dags
              mountPath: /opt/airflow/dags
            - name: config
              mountPath: "/opt/airflow/airflow.cfg"
              subPath: airflow.cfg
              readOnly: true
        - name: git-sync
          image: registry.k8s.io/git-sync/git-sync:v4.1.0
          imagePullPolicy: IfNotPresent
          securityContext:
              runAsUser: 65533
          volumeMounts:
          - name: dags
            mountPath: /git
          - name: git-sync-ssh-key
            mountPath: /etc/git-secret/ssh
            readOnly: true
            subPath: gitSshKey
      volumes:
        - name: config
          configMap:
            name: airflow-airflow-config
        - name: dags
          emptyDir: {}
        - name: git-sync-ssh-key
          secret:
            secretName: airflow-ssh-secret
            defaultMode: 256
  volumeClaimTemplates:
    - metadata:
        name: logs
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 3Gi
---


################################
## Airflow Webserver Ingress
################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-ingress
  labels:
    tier: airflow
    component: airflow-ingress
    release: airflow
    chart: "airflow-1"
    heritage: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: <your_host>
    http:
      paths:
      - backend:
          service:
            name: airflow-webserver
            port:
              name: airflow-ui
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - <your_host>
    secretName: ingress-webserver-secret
